feat: market watchers
